k8/tailscale_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: "elasticsearch-es-http.default.svc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-es-http
                port:
                  number: 9200
                  # name: https

    - host: "kibana-kb-http.default.svc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
                  # name: https

    - host: "fleet-server-agent-http.default.svc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleet-server-agent-http
                port:
                  number: 8220
                  # name: https
